--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-    "markdown-it-tetris": "^1.1.5"
+    "markdown-it-tetris": "^1.1.5",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.0"
   },
   "devDependencies": {
     "vuepress": "^1.3.1"
