--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.4",
+    "bootstrap": "^4.5.0",
     "markdown-it-tetris": "^1.1.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.0"
   },
   "devDependencies": {
+    "postcss-loader": "^3.0.0",
     "vuepress": "^1.3.1"
   }
 }
