--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "@vue/babel-preset-jsx": "^1.1.2",
     "autoprefixer": "^9.8.4",
     "bootstrap": "^4.5.0",
-    "postcss-loader": "^3.0.0",
     "markdown-it-tetris": "^1.1.5",
     "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^9.0.0"
   },
   "devDependencies": {
